# PlatformController

./: .gitignore  CMakeLists.txt  README.md  build_and_run_tests.sh  cmds.txt  package.xml
.github/workflows/: build_x86.yml
cmake/: CMakeLibraries.cmake  CMakeSettings.cmake
include/platform_controller/gpio/: GpioManager.hpp  IGpioManager.hpp  PinController.hpp  Rpi3BPlusGpioChips.hpp  defs.hpp
include/platform_controller/init/: Context.hpp  IContext.hpp  IRosCom.hpp  ITimersManager.hpp  MdcLoggingNode.hpp  PlatformControllerNode.hpp  RosCom.hpp  TimersManager.hpp  UserCommunicationNode.hpp
include/platform_controller/init/controllers/: IHandler.hpp  SetPlatformPwmValueHandler.hpp  SetPlatformSpeedHandler.hpp
include/platform_controller/init/services/: IService.hpp  PlatformStatusPollingService.hpp
include/platform_controller/init/workers/: LoggingWorker.hpp
include/platform_controller/roscom/: IPublisherBuilder.hpp  IRosCom.hpp  IRosComSender.hpp  PubMsg.hpp  PublisherBuilder.hpp  RosCom.hpp  RosComSender.hpp  RosComSender.tpl.hpp
include/platform_controller/syscom/: Command.hpp  CommandQueue.hpp  ConnectionStatus.hpp  ISysCom.hpp  Request.hpp  Response.hpp  SysCom.hpp  Syscom.hpp
include/platform_controller/syscom/codecs/: FrameHelpers.hpp  PlatformPollStatusSerDes.hpp  PlatformSetMotorPwmValueSerDes.hpp  PlatformSetMotorSpeedSerDes.hpp
include/platform_controller/syscom/defs/: Frame.hpp  MessageIds.hpp  Messages.hpp
include/platform_controller/transport/: ITransportProxy.hpp  SerialProxy.hpp  SpiProxy.hpp
src/: CMakeLists.txt  main.cpp
src/gpio/: CMakeLists.txt  GpioManager.cpp  PinController.cpp
src/init/: CMakeLists.txt  Context.cpp  MdcLoggingNode.cpp  PlatformControllerNode.cpp  RosCom.cpp  TimersManager.cpp  UserCommunicationNode.cpp
src/init/controllers/: SetPlatformPwmValueHandler.cpp  SetPlatformSpeedHandler.cpp
src/init/services/: PlatformStatusPollingService.cpp
src/init/workers/: LoggingWorker.cpp
src/roscom/: CMakeLists.txt  RosCom.cpp
src/syscom/: CMakeLists.txt  CommandQueue.cpp  SysCom.cpp
src/syscom/codecs/: PlatformPollStatusSerDes.cpp  PlatformSetMotorPwmValueSerDes.cpp  PlatformSetMotorSpeedSerDes.cpp
src/transport/: CMakeLists.txt  SerialProxy.cpp  SpiProxy.cpp
test/: CMakeLists.txt
test/ut/: CMakeLists.txt
test/ut/mocks/platform_controller_mocks/gpio/: GpioManagerMock.hpp
test/ut/mocks/platform_controller_mocks/init/: ContextMock.hpp  RosComMock.hpp  TimersManagerMock.hpp
test/ut/mocks/platform_controller_mocks/roscom/: RosComMock.hpp  RosComSenderMock.hpp
test/ut/mocks/platform_controller_mocks/syscom/: SysComMock.hpp
test/ut/mocks/platform_controller_mocks/transport/: TransportProxyMock.hpp
test/ut/tests/: CMakeLists.txt
test/ut/tests/init/: CMakeLists.txt
test/ut/tests/init/controllers/: CMakeLists.txt  SetPlatformSpeedHandlerTests.cpp
test/ut/tests/init/services/: CMakeLists.txt  PlatformStatusPollingServiceTests.cpp
test/ut/tests/syscom/: CMakeLists.txt  SysComTests.cpp
tools/: CMakeLists.txt  main.cpp
