####################################################
# Copyright (c) 2023 MacAndKaj. All rights reserved.
####################################################
# add_subdirectory(gpio)
add_subdirectory(init)
add_subdirectory(gpio)
add_subdirectory(transport)
add_subdirectory(roscom)
add_subdirectory(syscom)
